Implemented an endpoint to find a post from a maximum date and a minimum date. And searching for a keyword in the post title, post comment and post body